# NanoExchange

./: .gitignore  LICENSE  Makefile  README.md  build.gradle.kts  docker-compose.yml  run.sh  settings.gradle.kts
.github/workflows/: ci.yml
analytics/: pyproject.toml
analytics/src/nanoexchange_analytics/: __init__.py  cli.py  gbm.py  journal_reader.py  latency_analyzer.py  simulator.py  toxicity.py
analytics/tests/: conftest.py  test_gbm.py  test_journal_reader.py  test_latency_analyzer.py  test_simulator.py  test_toxicity.py
bench/: build.gradle.kts  load_test.py
bridge/: Dockerfile  pyproject.toml
bridge/src/nanoexchange_bridge/: __init__.py  batcher.py  translator.py  ws_bridge.py
bridge/tests/: conftest.py  test_batcher.py  test_order_bridge.py  test_translator.py  test_ws_roundtrip.py
client/: pyproject.toml
client/src/nanoexchange_client/: __init__.py  book_builder.py  feed.py  feed_handler.py  order_client.py  protocol.py
client/tests/: test_book_builder.py  test_e2e.py  test_feed.py  test_protocol.py
dashboard/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx  test-utils.tsx  types.ts
dashboard/src/components/: ConnectionStatus.tsx  DepthChart.test.tsx  DepthChart.tsx  LatencyMonitor.tsx  MetricsPanel.tsx  OrderBookLadder.test.tsx  OrderBookLadder.tsx  OrderEntry.test.tsx  OrderEntry.tsx  PriceChart.tsx  ThemeToggle.tsx  TradeTape.test.tsx  TradeTape.tsx  VirtualizedLadder.tsx  Window.tsx
dashboard/src/hooks/: useFrameMetrics.ts  useOrderSimulator.ts  useOrderSubmit.test.tsx  useOrderSubmit.ts  useThroughput.ts  useWebSocket.test.ts  useWebSocket.ts  useWindowManager.ts
dashboard/src/state/: ExchangeContext.tsx  exchangeContextInternal.ts  exchangeReducer.test.ts  (+1 more)
docs/: ARCHITECTURE.md  DECISIONS.md  PERFORMANCE.md  PROTOCOL.md
engine/: Dockerfile  build.gradle.kts
network/: build.gradle.kts
(+38 files in other folders)
