[project]
name = "nanoexchange-analytics"
version = "0.1.0"
description = "Journal reader, latency analyzer, flow-toxicity metrics, and a market-making simulator for NanoExchange"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "plotly>=5.20",
    "matplotlib>=3.8",
    "nanoexchange-client",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.scripts]
nx-analytics = "nanoexchange_analytics.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
