[project]
name = "nanoexchange-bridge"
version = "0.1.0"
description = "WebSocket bridge: UDP multicast + TCP binary → JSON WebSocket with rAF-aligned batching"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12",
    "orjson>=3.10",
    "nanoexchange-client",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.scripts]
nx-bridge = "nanoexchange_bridge.ws_bridge:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
